# mpi-ik

./: README.md  pyproject.toml
examples/: mano_example.py
mpi_ik/: __init__.py  armatures.py  config.py  models.py  prepare_model.py  solver.py
tests/: conftest.py  test_armatures.py  test_models.py  test_solver.py
